Project

General

Profile

Actions

Bug #23842

closed

multisite: es sync null versioned object failed because of olh info

Added by Tianshan Qu about 6 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

if we disable bucket version, es sync null version object will get olh xattr info,
which are not string, es will decode that failed.


Related issues 3 (0 open3 closed)

Has duplicate rgw - Bug #23841: multisite: es sync instance not same between inc-sync and full-sync Duplicate04/25/2018

Actions
Copied to rgw - Backport #37556: mimic: multisite: es sync null versioned object failed because of olh infoResolvedPrashant DActions
Copied to rgw - Backport #37557: luminous: multisite: es sync null versioned object failed because of olh infoResolvedNathan CutlerActions
Actions #2

Updated by Abhishek Lekshmanan almost 6 years ago

  • Status changed from New to 17
Actions #3

Updated by Casey Bodley over 5 years ago

  • Status changed from 17 to Pending Backport
  • Backport set to luminous mimic
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37556: mimic: multisite: es sync null versioned object failed because of olh info added
Actions #5

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37557: luminous: multisite: es sync null versioned object failed because of olh info added
Actions #6

Updated by Nathan Cutler about 5 years ago

  • Has duplicate Bug #23841: multisite: es sync instance not same between inc-sync and full-sync added
Actions #7

Updated by Nathan Cutler about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF