rgw: skip sync olh info to es

sync null versioned object will get olh info

fixes: http://tracker.ceph.com/issues/23842

Signed-off-by: Tianshan Qu <tianshan@xsky.com>
(cherry picked from commit 081d4c0e13188708cf5f3efffc7e838d9fad3e65)